Notes/Extraction/ingress-nginx-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-ciphers: "TLSv1.2:TLSv1.3"
    #kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-cert: "new-arch-ssl"
spec:
  ingressClassName: nginx
  rules:
    - host: paigestech.com
      http:
        paths:
          - path: /event(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: event-receive-docker-loadbalancer-service
                port:
                  number: 80
        
  tls:
  - hosts:
    - paigestech.com # Replace with your domain or subdomain
    secretName: new-arch-ssl
